--- a/README.Rmd
+++ b/README.Rmd
@@ -97,9 +97,14 @@ LumiBatch object.
 + Validate in test data.  
 4. *p1_4_GAP_Variables_test_07_02_2017.Rmd*  
 + Check classied samples by PANSS, sex, ethnicty, age, tobacco, ICD10, medication and PRS.  
-4. *p1_5_GAP_Enrichment_test_07_02_2017.Rmd*  
+5. *p1_5_GAP_Enrichment_test_07_02_2017.Rmd*  
 + Find most important genes.  
 + Check for enrichment in core genes.  
+6. *p1_6_GAP_Boosting_07_02_2017.Rmd*  
++ Find most important genes.  
++ Check for enrichment in core genes.  
+
+
 
 
 **Output:**  
