--- a/R/p4_2_Hy_GAP_Machine_learning_07_02_2017.Rmd
+++ b/R/p4_2_Hy_GAP_Machine_learning_07_02_2017.Rmd
@@ -157,12 +157,13 @@ table_fun_ml<- function(mldata,out_name_id,prs_col=(20:28)){
 top_dir<-getwd()
 data_dir <-"./P0_Characterise/output/"
 data_dir0 <-"./data/"
-output_dir <-"./P2_Hypothesis_Driven/output/"
-figs_dir <-"./P2_Hypothesis_Driven/figs/"
+predictor_dir <-"./P2_Hypothesis_Driven/output/"
+output_dir <-"./P4_Hybrid_models/1_PRS_full_adj_gx/output/"
+figs_dir <-"./P4_Hybrid_models/1_PRS_full_adj_gx/figs/"
 
 #Pre and post fixes.
-project_name = "Hypothesis_Driven"
-project_id = "p2_2"
+project_name = "1_PRS_full_adj_gx"
+project_id = "p4_2"
 
 ```
 
@@ -173,7 +174,7 @@ project_id = "p2_2"
 ```{r Load data}
 
 load(paste(data_dir,"Train_and_Test_data.Rdata",sep=""))
-load(file=paste(output_dir,"RFE_model_results_hypothesis_free_data.Rdata",sep=""))
+load(file=paste(predictor_dir,"RFE_model_results_hypothesis_free_data.Rdata",sep=""))
 
 
 ```
@@ -197,11 +198,14 @@ metric <- "Accuracy"
 opt_rfepredictors<-predictors(rfe_output)
 
 #input data frame
-expressionRFE<-training_df[,c("Phenotype",opt_rfepredictors)]
-expressionRFE<-training_df_full[,c("Phenotype",opt_rfepredictors)]
+#expressionRFE<-training_df[,c("Phenotype",opt_rfepredictors)]
+expressionRFE<-training_df_full[,c("Phenotype","PRS_1",opt_rfepredictors)]
 training_df<-training_df_full
+names(expressionRFE)[2]<-"PRS1"
+expressionRFE<-expressionRFE[complete.cases(expressionRFE),]
 testing_df<-testing_df_full
-
+testing_df$PRS1<-testing_df$PRS_1
+testing_df<-testing_df[complete.cases(testing_df$PRS1),]
 
 ```
 
@@ -210,11 +214,13 @@ testing_df<-testing_df_full
 
 #Warning will use a lot of resources and take a long time. Output is a list of machine learning models. 
 ml_models<-ml_fun(expressionRFE)
-ml_models_full<-ml_fun(expressionRFE_full)
+#ml_models_full<-ml_fun(expressionRFE_full)
+
+
 
 #Save Models
-save(ml_models, ml_models_full, file=paste(output_dir,"Classification_models.rdata",sep=""), compress = T)
-
+#save(ml_models, ml_models_full, file=paste(output_dir,"Classification_models.rdata",sep=""), compress = T)
+save(ml_models, file=paste(output_dir,"Classification_models.rdata",sep=""), compress = T)
 ```
 
 
@@ -224,19 +230,7 @@ save(ml_models, ml_models_full, file=paste(output_dir,"Classification_models.rda
 #load ML data
 load(file=paste(output_dir,"Classification_models.rdata",sep=""))
 
-
-###########################Use classification_model_script_gap_and_impact.rmd
-##### partial adjustment
 modellist<-ml_models
-output_dir <-"./P2_Hypothesis_Driven/output/"
-figs_dir <-"./P2_Hypothesis_Driven/figs/"
-
-
-##### Full adjustment
-modellist<-ml_models_full
-output_dir <-"./P2_Hypothesis_Driven/pheno_corrected/output/"
-figs_dir <-"./P2_Hypothesis_Driven/pheno_corrected/figs/"
-
 
 #extract accuracy Models
 ml_resample<-resamples(modellist)
