--- a/R/p2_6_HD_GAP_Boosting_07_02_2017.Rmd
+++ b/R/p2_6_HD_GAP_Boosting_07_02_2017.Rmd
@@ -223,6 +223,9 @@ save(glmnet_fit_b, file=paste(output_dir,project_id,project_name,"Classification
 
 ## Check most important variables for models and plot tables
 ```{r}
+load(file=paste(output_dir,project_id,project_name,"Classification_model.rdata",sep=""))
+p2_glm<-glmnet_fit_b
+
 
 glmvarimp<-varImp(glmnet_fit_b, scale = FALSE)
 glmvariables<-glmvarimp$importance
